--- a/vue_app/templates/list.html
+++ b/vue_app/templates/list.html
@@ -6,25 +6,9 @@
     </head>
 <link rel="stylesheet" href="./style/style.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<body class="bg-light">
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-          <a class="navbar-brand p-1" href="#">PDF Report Extractor</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+<body class="bg-blue">
+    
+    
 
     <div class="container-sm d-flex justify-content-center" style="padding-top: 25px">
         <div class="border d-flex justify-content-center">
@@ -81,12 +65,15 @@
         
 </body>
 <style>
+body{
+      color: white;
+}
   .border{
     border-style: solid;
     width: 66%; height: 450px; border-radius:25px;
     border-width: 3px;
     border-color: black;
-    background-color: #ffced6;
+    background-color: #4e5392;
 }
 .inner-border{
     border-style: outset;
@@ -99,12 +86,15 @@
     border-style: none;
     width: 242px;
     height: 120px;
-    background-color: #ffced6;
+    background-color: #4e5392;
     border-radius: 15px;
 }
 
 nav{
-    background-color: #ffced6;
+    background-color: #4e5392;
+}
+.bg-blue{
+    background-color:#c5cae9;
 }
 
 </style>
